# common

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  README.zh-cn.md  vcpkg.json
qtapp/: common.h
qtapp/common/: CMakeLists.txt  CommonTargets.cmake.in  logging.cc  logging.h  logging_test.cc  settings.cc  settings.h  settings_test.cc
